--- a/HaUISocialMedia_server/pom.xml
+++ b/HaUISocialMedia_server/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.4</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
